macro-utils/tests/ui/generate/fail/endian_parse_fail.stderr
error: expected `BE` or `LE`
 --> tests/ui/generate/fail/endian_parse_fail.rs:5:9
  |
5 |         NE;
  |         ^^
